<resources>
    <string name="app_name">LovingPets</string>
    <string name="favorite_dog">狗狗主站</string>
    <string name="favorite_cat">猫猫主站</string>
    <string name="favorite_bird">鸟儿主站</string>
    <string name="favorite_fish">鱼儿主站</string>
    <string name="nav_bottom_1">主站</string>
    <string name="nav_bottom_2">分类</string>
    <string name="nav_bottom_3">爱宠圈</string>
    <string name="nav_bottom_4">购物车</string>
    <string name="nav_bottom_5">我的</string>
    <string name="login_title1">爱宠APP</string>
    <string name="login_title2">爱宠物，爱生活</string>
    <string name="register_title2">爱宠物？一起加入爱宠吧！</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="regist_now">立即注册</string>
    <string name="login_button_text">登 录</string>
    <string name="register_button_text">注 册</string>
    <string name="search_hint">搜索品牌、类目、关键字</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_balance">余额</string>
    <string name="my_coin">爱宠币</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_about">关于</string>
    <string name="unpay">待付款</string>
    <string name="to_be_revceive">待收货</string>
    <string name="to_be_evaluated">待评价</string>
    <string name="all_orders">全部订单</string>
    <string name="register_et_un_hint">输入您的手机号，作为登录账号</string>
    <string name="et_hint">设定一个密码</string>
    <string name="et_code_hint">请输入收到的验证码</string>
    <string name="check_version">版本检测</string>
    <string name="feed_back">意见反馈</string>
    <string name="connect_to_service">联系客服</string>
    <string name="manage_address">管理收货地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_evaluate">我的评价</string>
    <string name="pets_info">宠物资料</string>
    <string name="my_cart">我的购物车</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
