<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_favorite_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <!--左侧半透明的布局，点击退出当前activity-->
    <LinearLayout
        android:id="@+id/change_favorite_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

    </LinearLayout>

    <!--右侧布局，用于切换站点-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/change_favorite_ll_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/change_favorite_iv_size"
                android:layout_height="@dimen/change_favorite_iv_size"
                android:src="@mipmap/dog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_dog"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_favorite_ll_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/change_favorite_iv_size"
                android:layout_height="@dimen/change_favorite_iv_size"
                android:src="@mipmap/cat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_cat"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_favorite_ll_bird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/change_favorite_iv_size"
                android:layout_height="@dimen/change_favorite_iv_size"
                android:src="@mipmap/bird" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_bird"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_favorite_ll_fish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/change_favorite_iv_size"
                android:layout_height="@dimen/change_favorite_iv_size"
                android:src="@mipmap/fish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_fish"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>