<?xml version="1.0" encoding="utf-8"?>
<!--注册页面布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/launch_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/register_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:padding="@dimen/dp10">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_button_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title1"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_title2"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/register_input_layout"
            layout="@layout/input_layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/register_layout_progress"
            layout="@layout/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp20"
            android:visibility="gone" />

        <include
            android:id="@+id/register_layout_success"
            layout="@layout/layout_success"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp20"
            android:visibility="gone" />

        <include
            android:id="@+id/register_layout_failed"
            layout="@layout/layout_failed"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp20"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/register_tv_register"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/text_bg"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="2dp"
        android:text="@string/register_button_text"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</LinearLayout>